a little change from home, testimoni, and about

--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,7 @@
   <body>
     <!-- Navbar Section of About -->
     <section id="navbar">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-md" style="background-color: #D4F1F4">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-lg" style="background-color: #D4F1F4">
         <!-- Logo Brand -->
         <div class="container">
           <a class="navbar-brand" href="#"><img src="../dist/img/logo.png" width="50px" height="50px" alt="">Blue Dental</a>
@@ -102,8 +102,9 @@
       </div>
     </section>
     <br />
-    <!-- Content -->
+    <!-- About -->
     <section id="about-content">
+        <!-- About Content 1 -->
         <div class="container content-space-2">
           <div class="row">
             <div class="col">
@@ -129,6 +130,7 @@
           </div>
           <hr class="my-5">
         </div>
+        <!-- About Content 2 -->
         <div class="container">
           <div class="row">
             <div class="col">
@@ -154,6 +156,11 @@
           </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="my-3 pt-2 text-muted text-center text-small">
+      <p class="mb-1">&copy; Develop by Iffah Karimah TI02</p>
+    </footer>
     
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
