--- a/pages/testimoni.html
+++ b/pages/testimoni.html
@@ -52,7 +52,7 @@
   <body>
     <!-- Navbar Section of About -->
     <section id="navbar">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-md" style="background-color: #D4F1F4">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-lg" style="background-color: #D4F1F4">
         <!-- Logo Brand -->
         <div class="container">
           <a class="navbar-brand" href="#"><img src="../dist/img/logo.png" width="50px" height="50px" alt="">Blue Dental</a>
@@ -298,7 +298,7 @@
                   </div>
                 </div>
               </div>
-              <!-- Close tag carousel slides-3 -->
+              <!-- ./carousel slides-3 -->
             </div>
           </div>
         </div>
@@ -317,6 +317,7 @@
       <!-- /container -->
     </main>
 
+    <!-- Footer -->
     <footer class="my-3 pt-2 text-muted text-center text-small">
       <p class="mb-1">&copy; Develop by Iffah Karimah TI02</p>
     </footer>
