--- a/pages/about.html
+++ b/pages/about.html
@@ -8,13 +8,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
 
+    <!-- Icon -->
+    <link rel="icon" href="../dist/img/logo.png"/>
+
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
 
     <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
 
     <style>
       * {
@@ -36,12 +39,12 @@
     <title>Blue Dental - Best Indonesian Dental Clinic</title>
   </head>
   <body>
-    <!-- Navbar Section of About -->
+    <!-- Navbar -->
     <section id="navbar">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-lg" style="background-color: #D4F1F4">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-lg" style="background-color: #d4f1f4">
         <!-- Logo Brand -->
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="../dist/img/logo.png" width="50px" height="50px" alt="">Blue Dental</a>
+          <a class="navbar-brand" href="#"><img src="../dist/img/logo.png" width="50px" height="50px" alt="" />Blue Dental</a>
           <!-- Navbar -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -69,11 +72,8 @@
             <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
               <form class="form-inline ml-0 ml-md-3">
                 <div class="navbar navbar-expand-lg">
-                  <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                  <a class="text-muted" href="#" aria-label="Search">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-                  </a>
-                  <a class="btn btn-sm btn-outline-dark" href="#">Sign up</a>
+                  <!-- Here a line (101) for search input (dah ku hapus yg sebelumnya) -->
+                  <a class="btn btn-sm btn-outline-dark align-self-center" href="#">Login</a>
                 </div>
               </form>
             </ul>
@@ -82,8 +82,9 @@
         </div>
       </nav>
     </section>
-    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#D4F1F4" fill-opacity="1" d="M0,192L48,202.7C96,213,192,235,288,245.3C384,256,480,256,576,229.3C672,203,768,149,864,160C960,171,1056,245,1152,256C1248,267,1344,213,1392,186.7L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg> -->
-    <br> <br> <br>
+    <br />
+    <br />
+    <br />
 
     <!-- Content Section of About -->
     <!-- Title -->
@@ -156,10 +157,12 @@
           </div>
         </div>
     </section>
+    
+    <hr>
 
     <!-- Footer -->
     <footer class="my-3 pt-2 text-muted text-center text-small">
-      <p class="mb-1">&copy; Develop by Iffah Karimah TI02</p>
+      <p class="mb-1">&copy; Develop by Iffah Karimah | TI02</p>
     </footer>
     
 
