--- a/pages/testimoni.html
+++ b/pages/testimoni.html
@@ -6,8 +6,10 @@
 
     <!-- Bootstrap here -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
-    <link href="/docs/4.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Testimoni | Blue Dental</title>
+
+    <!-- Icon -->
+    <link rel="icon" href="../dist/img/logo.png"/>
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,7 +32,6 @@
 
       .card {
         margin: 0 0.5em;
-        box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
       }
 
       .carousel-inner {
@@ -83,11 +84,8 @@
             <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
               <form class="form-inline ml-0 ml-md-3">
                 <div class="navbar navbar-expand-lg">
-                  <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                  <a class="text-muted" href="#" aria-label="Search">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-                  </a>
-                  <a class="btn btn-sm btn-outline-dark" href="#">Sign up</a>
+                  <!-- Here a line (101) for search input (dah ku hapus yg sebelumnya) -->
+                  <a class="btn btn-sm btn-outline-dark align-self-center" href="#">Login</a>
                 </div>
               </form>
             </ul>
@@ -102,9 +100,9 @@
     <!-- Main content -->
     <main role="main">
       <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron" style="background-color: #189AB4;">
+      <div class="jumbotron" style="background-color: #D4F1F4; height: 25rem;">
         <div class="container">
-          <h1 class="display-3">Bagaimana tanggapan mereka tentang Blue Dental?</h1>
+          <h1 class="display-3 mt-4">Bagaimana tanggapan mereka tentang Blue Dental?</h1>
         </div>
       </div>
 
@@ -115,14 +113,14 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-        <!-- Carousel Slide-1 -->
+        <!-- Carousel -->
         <div class="carousel-inner">
+          <!-- Carousel Slides-1 -->
           <div class="carousel-item active">
             <div class="cards-wrapper d-flex">
               <!-- Card slides-1 1 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card">
+                <div class="card mb-4 shadow-sm h-100">
                     <div class="card-body">
                       <h5 class="card-title">Best clinic ever!</h5>
                       <p class="card-text">
@@ -130,52 +128,51 @@
                         watch Netflix too!
                       </p>
                       <p>What an insane!</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <p class="card-text" style="margin-top: 8rem;"><small class="text-muted">Last updated 20 mins ago</small></p>
                     </div>
-                  </div>
                 </div>
               </div>
               <!-- Card slides-1 2 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block ">
                     <div class="card-body">
                       <h5 class="card-title">Strategis!</h5>
                       <p class="card-text">
                         Kemarin aku operasi gigi bungsu disini. Untungnya lokasi Johnson's ada ditengah kota, jadi aku nggak perlu susah-susah mikirin transportasi, tinggal naik transjakarta T102, turun depan kopi kenangan, nyampe deh.
                         Ngepas banget sama besoknya aku ada keperluan meeting di kantor. Thanks a lot Johnson's, aku nggak tau deh meeting ini bakal kekejar apa nggak kalo nggak ada Johnson's.
                       </p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <p class="card-text" style="margin-top: 1.5rem;"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                   </div>
                 </div>
               </div>
               <!-- Card slides-1 3 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block">
                     <div class="card-body">
                       <h5 class="card-title">Kids-Safe</h5>
                       <p class="card-text">
                         Ini klinik favorit aku dari jaman kuliah sampe sekarang udah punya anak 3. Suka ngajak anak juga buat treatment, karena disini aman banget, mulai dari tools treatment sampe ruangannya yang selalu bersih. Untuk
                         pricenya worth to try guys. Nyesel kalau nggak coba.
                       </p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <p class="card-text" style="margin-top: 9rem;"><small class="text-muted">Last updated 1 hour ago</small></p>
                     </div>
                   </div>
                 </div>
               </div>
               <!-- Card slides-1 4 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block">
                     <div class="card-body">
                       <h5 class="card-title">Unik dan favorit!</h5>
                       <p class="card-text">
                         Interiornya aesthetic bangeet, pelayanan dokternya juga juara. Kalo lagi konsultasi sama dentistnya berasa lagi ngomong sama bestie, senyaman itu guys. Jangan khawatir sama ke-<i>hygienis</i>-an peralatan treatment
                         nya.
                       </p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <p class="card-text" style="margin-top: 12rem;"><small class="text-muted">Last updated 2 days ago</small></p>
                     </div>
                   </div>
                 </div>
@@ -183,125 +180,134 @@
               <!-- Close tag card slides-1 -->
             </div>
           </div>
-        </div>
-        <!-- Carousel Slides-2 -->
-        <div class="carousel-inner">
+          <!-- Carousel Slides-2 -->
           <div class="carousel-item">
-            <div class="cards-wrapper">
+            <div class="cards-wrapper d-flex">
               <!-- Card slides-2 1 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card">
+                <div class="card mb-4 shadow-sm h-100">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <h5 class="card-title">Suka banget deh</h5>
+                      <p class="card-text">
+                        Kemarin aku dateng pagi-pagi buta, ruangannya udah rapi dan staff-staffnya juga ramah. Mantulity!
+                      </p>
+                      <p class="card-text" style="margin-top: 20rem;"><small class="text-muted">Last updated 2 mins ago</small></p>
                     </div>
-                  </div>
                 </div>
               </div>
               <!-- Card slides-2 2 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block ">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <h5 class="card-title">Nggak bisa ber-<i>word"</i></h5>
+                      <p class="card-text">
+                        Kalian tau kenapa aku sesuka itu sama kliniknya? Yess, karena deket sama cafe favorit semua orang! Haha
+                      </p>
+                      <p class="card-text" style="margin-top: 18.5rem;"><small class="text-muted">Last updated 30 mins ago</small></p>
                     </div>
                   </div>
                 </div>
               </div>
               <!-- Card slides-2 3 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- Card slides-1 4 -->
-              <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
-                    <div class="card-body">
-                      <h5 class="card-title">Unik dan favorit!</h5>
+                      <h5 class="card-title">Bersih cuy</h5>
                       <p class="card-text">
-                        Interiornya aesthetic bangeet, pelayanan dokternya juga juara. Kalo lagi konsultasi sama dentistnya berasa lagi ngomong sama bestie, senyaman itu guys. Jangan khawatir sama ke-<i>hygienis</i>-an peralatan treatment
-                        nya.
+                        Gue nggak tau harus ngegambarin pake kata-kata apalagi, demi apapun ruangannya sebersih itu.. Mau nangis aja rasanya :')
+                        <p>Sekalian deh kalo bisa gue udah tiduran kosek-kosek dilantai. Sakit giginya tiba-tiba hilang seketika pas ngeliat books corner, ya allah gue suka banget sama buku!</p>
                       </p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <p class="card-text" style="margin-top: 7rem;"><small class="text-muted">Last updated 28 mins ago</small></p>
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- Close tag carousel slides-2 -->
+              <!-- Card slides-2 4 -->
+              <div class="col-md-3">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block">
+                    <div class="card-body">
+                      <h5 class="card-title">Kaya bioskop</h5>
+                      <p class="card-text">
+                        Kalian tau nggak, disini tuh bisa nonton netflix. Paling seru kalo lagi sendirian, kalo udah rame, yah udah.. nggak perlu capek-capek beli tiket, disini aja udah berasa nonton bioskop, haha!
+                        <p>Pertahankan keunikanmu wahai Blue Dental :'D</p>
+                      </p>
+                      <p class="card-text" style="margin-top: 10rem;"><small class="text-muted">Last updated 1 day ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Close tag card slides-2 -->
             </div>
           </div>
-        </div>
-        <!-- Carousel Slides-3 -->
-        <div class="carousel-inner">
+          <!-- Carousel Slides-3 -->
           <div class="carousel-item">
-            <div class="cards-wrapper">
+            <div class="cards-wrapper d-flex">
               <!-- Card slides-3 1 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card">
+                <div class="card mb-4 shadow-sm h-100">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <h5 class="card-title">My Favorite!</h5>
+                      <p class="card-text">
+                        I'm a foreigner. Yash, aku masih terbata-bata dengan bahasa Indonesia. But, did you know? All staffs can english too! OMG.. i'm very surprised! That so rarely find a place and friendly foreigners. I will give Blue Dental to five stars, yeay!
+                      </p>
+                      <p>Perfectly insane!</p>
+                      <p class="card-text" style="margin-top: 8rem;"><small class="text-muted">Last updated 10 hours ago</small></p>
                     </div>
-                  </div>
                 </div>
               </div>
               <!-- Card slides-3 2 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block ">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <h5 class="card-title">Strategis!</h5>
+                      <p class="card-text">
+                        Kemarin aku operasi gigi bungsu disini. Untungnya lokasi Johnson's ada ditengah kota, jadi aku nggak perlu susah-susah mikirin transportasi, tinggal naik transjakarta T102, turun depan kopi kenangan, nyampe deh.
+                        Ngepas banget sama besoknya aku ada keperluan meeting di kantor. Thanks a lot Johnson's, aku nggak tau deh meeting ini bakal kekejar apa nggak kalo nggak ada Johnson's.
+                      </p>
+                      <p class="card-text" style="margin-top: 1.5rem;"><small class="text-muted">Last updated 19 hours ago</small></p>
                     </div>
                   </div>
                 </div>
               </div>
               <!-- Card slides-3 3 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <h5 class="card-title">Kids-Safe</h5>
+                      <p class="card-text">
+                        Ini klinik favorit aku dari jaman kuliah sampe sekarang udah punya anak 3. Suka ngajak anak juga buat treatment, karena disini aman banget, mulai dari tools treatment sampe ruangannya yang selalu bersih. Untuk
+                        pricenya worth to try guys. Nyesel kalau nggak coba.
+                      </p>
+                      <p class="card-text" style="margin-top: 9rem;"><small class="text-muted">Last updated 1 day ago</small></p>
                     </div>
                   </div>
                 </div>
               </div>
               <!-- Card slides-3 4 -->
               <div class="col-md-3">
-                <div class="card mb-4 shadow-sm">
-                  <div class="card d-none d-md-block">
+                <div class="card mb-4 shadow-sm h-100">
+                  <div class="d-none d-md-block">
                     <div class="card-body">
                       <h5 class="card-title">Unik dan favorit!</h5>
                       <p class="card-text">
                         Interiornya aesthetic bangeet, pelayanan dokternya juga juara. Kalo lagi konsultasi sama dentistnya berasa lagi ngomong sama bestie, senyaman itu guys. Jangan khawatir sama ke-<i>hygienis</i>-an peralatan treatment
                         nya.
                       </p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      <p class="card-text" style="margin-top: 12rem;"><small class="text-muted">Last updated 13 hours ago</small></p>
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- ./carousel slides-3 -->
+              <!-- Close tag card slides-3 -->
             </div>
           </div>
         </div>
+        <!-- Button Carousel -->
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -319,7 +325,7 @@
 
     <!-- Footer -->
     <footer class="my-3 pt-2 text-muted text-center text-small">
-      <p class="mb-1">&copy; Develop by Iffah Karimah TI02</p>
+      <p class="mb-1">&copy; Develop by Iffah Karimah | TI02</p>
     </footer>
 
     <!-- Javascript here -->
