save current update in branch

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
       <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-lg" style="background-color: #D4F1F4">
         <!-- Logo Brand -->
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="../dist/img/logo.png" width="50px" height="50px" alt="">Blue Dental</a>
+          <a class="navbar-brand" href="#"><img src="../dist/img/BlueDentalLogo.png" width="50px" height="50px" alt="">Blue Dental</a>
           <!-- Navbar -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -113,7 +113,7 @@
           </div>
           <div class="row my-4">
             <div class="col">
-              <img src="../dist/img/ozkan-guner-aFqSRokmw2E-unsplash.jpg" class="img-fluid w-100 h-100" alt="" style=" border-radius: 20px" />
+              <img src="../dist/img/image4.jpg" class="img-fluid w-100 h-100" alt="" style=" border-radius: 20px" />
             </div>
             <div class="col">
               <p>
@@ -139,7 +139,7 @@
           </div>
           <div class="row my-4">
             <div class="col img-tech">
-              <img src="../dist/img/quang-tri-nguyen-ER1vKAWRqns-unsplash.jpg" class="img-fluid w-100 h-100" alt="" style="border-radius: 20px" />
+              <img src="../dist/img/image5.jpg" class="img-fluid w-100 h-100" alt="" style="border-radius: 20px" />
             </div>
             <div class="col">
               <p><b>Hadir dengan teknologi terbaru dan berkualitas.</b><p>
