--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-lg" style="background-color: #d4f1f4">
         <!-- Logo Brand -->
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="../dist/img/logo.png" width="50px" height="50px" alt="" />Blue Dental</a>
+          <a class="navbar-brand" href="#"><img src="../dist/img/BlueDentalLogo.png" width="50px" height="50px" alt="" />Blue Dental</a>
           <!-- Navbar -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -125,7 +125,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../dist/img/benyamin-bohlouli-B_sK_xgzwVA-unsplash.jpg" class="img-fluid" alt="image in carousel 1" />
+          <img src="dist/img/image1.jpg" class="img-fluid" alt="image in carousel 1" />
 
           <div class="container">
             <div class="carousel-caption text-left">
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="carousel-item">
-            <img src="../dist/img/jose-vazquez-4SUyx4KQ5Ik-unsplash.jpg" class="img-fluid" alt="image in carousel 1" />
+            <img src="dist/img/image2.jpg" class="img-fluid" alt="image in carousel 1" />
 
           <div class="container">
             <div class="carousel-caption">
@@ -147,7 +147,7 @@
           </div>
         </div>
         <div class="carousel-item">
-            <img src="../dist/img/quang-tri-nguyen-VxVO1zrY5F8-unsplash.jpg" class="img-fluid" alt="image in carousel 1" />
+            <img src="dist/img/image6.jpg" class="img-fluid" alt="image in carousel 1" />
 
           <div class="container">
             <div class="carousel-caption text-right">
@@ -199,7 +199,7 @@
           </div>
           <div class="row py-4">
             <div class="col img">
-                <img src="../dist/img/benyamin-bohlouli-B_sK_xgzwVA-unsplash.jpg" class="h-100 w-100" style="border-radius: 20px;" alt="">
+                <img src="dist/img/image1.jpg" class="h-100 w-100" style="border-radius: 20px;" alt="">
             </div>
             <div class="col">
                 <p>Berdiri sejak 2022. Blue Dental adalah klinik gigi yang berdedikasi pada senyuman Anda indah dan sehat Anda. Saat ini Blue Dental dikepalai oleh Dr. Iffah Karimah P.hD. Dengan Chief Executive Officer Dr. Jovina Gustari Juwita P.hD. Dokter bedah gigi terbaik, Drg. Spesialis Saraf Gigi, Lintang Kasyfi Ramadhan, P.hD. Beserta Drg. Fitriani, M.T.</p>
