--- a/pages/testimoni.html
+++ b/pages/testimoni.html
@@ -55,7 +55,7 @@
       <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-lg" style="background-color: #D4F1F4">
         <!-- Logo Brand -->
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="../dist/img/logo.png" width="50px" height="50px" alt="">Blue Dental</a>
+          <a class="navbar-brand" href="#"><img src="../dist/img/BlueDentalLogo.png" width="50px" height="50px" alt="">Blue Dental</a>
           <!-- Navbar -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
